--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -19,8 +20,16 @@
     "@vue/cli-plugin-vuex": "~4.5.19",
     "@vue/cli-service": "~4.5.19",
     "@vue/compiler-sfc": "^3.0.0",
+    "commitizen": "^4.2.5",
+    "cz-conventional-changelog": "^3.3.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "prettier": "^2.7.1",
     "typescript": "~4.1.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
