--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
+    "axios": "^1.1.2",
+    "coderwhy": "^1.2.2",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.6",
+    "element-plus": "^2.2.17",
+    "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -25,11 +31,13 @@
     "@vue/compiler-sfc": "^3.0.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
+    "husky": "^8.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^2.7.1",
     "typescript": "~4.1.5",
-    "husky": "^8.0.0"
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-vue-components": "^0.22.8"
   },
   "config": {
     "commitizen": {
