--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "coderwhy": "^1.2.2",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.6",
+    "echarts": "^5.4.0",
     "element-plus": "^2.2.17",
     "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
