--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "axios": "^1.1.2",
     "coderwhy": "^1.2.2",
     "core-js": "^3.6.5",
+    "countup": "^1.8.2",
+    "countup.js": "^2.4.2",
     "dayjs": "^1.11.6",
     "echarts": "^5.4.0",
     "element-plus": "^2.2.17",
     "normalize.css": "^8.0.1",
+    "qs": "^6.11.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
